[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/earth_backscreen.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Mapa.gd" type="Script" id=3]
[ext_resource path="res://Scenes/PauseScene.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 100, 10 )

[node name="Mapa" type="Node"]
script = ExtResource( 3 )

[node name="PauseCanvas" type="CanvasLayer" parent="."]

[node name="PauseScene" parent="PauseCanvas" instance=ExtResource( 4 )]
visible = false

[node name="background" type="CanvasLayer" parent="."]
layer = -1

[node name="Sprite" type="Sprite" parent="background"]
position = Vector2( 300, 175 )
texture = ExtResource( 2 )

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Spawn" type="Area2D" parent="." groups=[
"Spawn",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Spawn"]
position = Vector2( 96, 25 )
shape = SubResource( 1 )
[connection signal="player_dead" from="Player" to="." method="_on_Player_player_dead"]
[connection signal="area_entered" from="Spawn" to="." method="_on_Spawn_area_entered"]
[connection signal="area_exited" from="Spawn" to="." method="_on_Spawn_area_exited"]
